style.css
body {
    font-family: monospace;
    background: lightgray;
}

header {
    text-align: center;
}

header h1, header img {
    display: inline;
}

main {
    width: 50%;
    margin-right: 25%;
    margin-left: 15%;
    padding: 5%;
}

header {
    color: darkred;
    background-color: lightgray;
    height: 7%;
    width: 100%;
    text-align: left;
    position: fixed;
    z-index: 2;
    top: 0;
    right: 0;
    overflow: hidden;
    box-shadow: 0 4px 8px 1px rgba(0, 0, 0, 0.2), 0 6px 20px 2px rgba(0, 0, 0, 0.19);
}

header h1 {
    padding-left: 1%;
}

header nav {
    background-color: #650d0d;
    text-align: center;
}

header nav a {
    text-decoration: none;
    color: white;
}

header nav a:hover {
    box-shadow: 2px 4px 8px 1px rgb(101, 13, 13), 0 6px 20px 2px rgba(0, 0, 0, 0.19);
    color: black;
    background-color: lightgray;
    padding: 0.3%;
}

.float_left {
    height: 93%;
    width: 10%;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    overflow: hidden;
    padding: 2%;
    padding-top: 4%;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.float_left form button {
    text-decoration: none;
    border: none;
    margin-top: 3%;
    padding: 3%;
    background-color: #650d0d;
    color: white;
    border-radius: 2%;
}

.float_left form button:hover {
    box-shadow: 2px 4px 8px 1px rgb(101, 13, 13), 0 6px 20px 2px rgba(0, 0, 0, 0.19);
}

.float_left section {
    margin-top: 10%;
    padding: 1%;
    height: 50%;
    border: 3px solid gray;
    border-radius: 1%;
}

.float_right a{
    text-decoration: none;
    color: darkred;
}


.float_right {
    height: 93%;
    width: 20%;
    position: fixed;
    z-index: 1;
    top: 0;
    right: 0;
    overflow: hidden;
    padding: 2%;
    padding-top: 4%;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

footer {
    text-align: left;
    width: 50%;
    margin-right: 25%;
    margin-left: 15%;
    padding: 1%;
    width: auto;
    z-index: 1;
    color: white;
    background-color: darkgray;
}

section img {
    float: left;
    max-width: 20%;
    max-height: 20%;
}

.imgLink{
    height: auto;
    max-width: 3.5%;
    background-color: lightgrey;
    height: 2em;
    width: 2em;
    padding: 1em;
    border-radius: 20%;
}

.charBar {
    --scrollbar-color-thumb: lightgrey;
    --scrollbar-color-track: darkred;
    --scrollbar-width: thin;
    --scrollbar-width-legacy: 10px;
}

